# MathChecker

./: .gitignore  IMPROVEMENT_NOTES.md  LEARNED_ROUTER_ALGORITHM.md  PRISM_THEORY.md  README.md  UPLOAD_TO_GITHUB.md  mathchecker_overview.html  pedcot_overview.html  prism_pipeline.html  pyproject.toml
paper/: prism.tex
scripts/: calibrate_likelihoods.py  evaluate_router.py  export_router_dataset.py  train_learned_router.py  train_prism_router.py
src/mathchecker/: __init__.py  cli.py  utils.py
src/mathchecker/core/: models.py
src/mathchecker/evaluation/: __init__.py
src/mathchecker/llm/: __init__.py  openai_client.py
src/mathchecker/pipeline/: __init__.py  router.py  runner.py  step_classifier.py  tools.py
src/mathchecker/pipeline/templates/: stage2.txt
src/mathchecker/prism/: __init__.py  attribution.py  conformal.py  eig.py  eprocess.py  infer.py  joint_calibration.py  likelihoods.py  posterior.py  predictor.py  stage1_consistency.py
src/pedcot/: __init__.py  cli.py
src/pedcot/core/: __init__.py  constants.py
src/pedcot/evaluation/: metrics.py
src/pedcot/llm/: openai_client.py
src/pedcot/pipeline/: __init__.py  parsers.py  predictor.py  prompts.py  router.py  router_dataset.py  router_eval.py  runner.py
tests/: test_prism_attribution.py  test_prism_calibration.py  test_prism_conformal.py  test_prism_e2e.py  test_prism_eig.py  test_prism_eprocess.py  test_prism_infer.py  test_prism_joint_calibration.py  test_prism_posterior.py  test_prism_stage1.py  test_router_eval.py  test_smoke.py  test_specialist_tools.py  test_step_classifier_and_review.py
(+1 files in other folders)
