[project]
name = "pedcot"
version = "0.1.0"
description = "PedCoT reproduction CLI and utilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.2.3",
    "tqdm>=4.66.0",
]

[project.scripts]
pedcot = "pedcot.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
router = [
    "accelerate>=0.34.2",
    "peft>=0.12.0",
    "torch>=2.3.0",
    "transformers>=4.53.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
pedcot = ["pipeline/templates/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
